--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -3,6 +3,7 @@
 
   <div class="wrapper">
     <div class="site-footer-inner">
+      <div>Created by Alexandre Bokhobza</div>
       <div>Copyright &#169; Julia Venturini</div>
       <div>Powered by <a title="Jekyll is a simple, blog-aware, static site
       generator." href="http://jekyllrb.com/">Jekyll</a> &amp; <a title="Yat, yet
