--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,15 @@ banner: '/assets/images/IMG_7511-2.jpg'
         <br>
         <li> Feb 2022: Representative of the intermediate staff association of the University of Bern to <a href="http://www.actionuni.ch/" target="_blank">actionuni</a>.</li>
         <br>
-        <li> Sep 2022: Organizing committee of the <a href="https://www.nachtderforschung.unibe.ch/unibe/portal/microsites/nacht_der_forschung/content/e581313/e1257964/NdF2022_Programm_ger.pdf" target="_blank">"kids lab"</a> during the <a href="https://www.nachtderforschung.unibe.ch/" target="_blank">Nacht des Forschung</a>.</li>
+        <li> Sep 2022: 2nd best talk award at <a href="https://meetings.ls2.ch/physiology2022" target="_blank">Swiss Physiology Meeting 2022</a>.</li>
+        <br>
+        <li> Sep 2022: Organizing committee of the <a href="https://www.nachtderforschung.unibe.ch/unibe/portal/microsites/nacht_der_forschung/content/e581313/e1257964/NdF2022_Programm_ger.pdf" target="_blank">"kids lab"</a> during the <a href="https://www.nachtderforschung.unibe.ch/" target="_blank">Nacht der Forschung</a>.</li>
         <br>
         <li> Sep 2022: Public presentation of the <a href="https://www.vitaport.ch/" target="_blank">Vitaport</a> exhibition for scientific popularization.</li>
         <br>
         <li> Sep 2022: Invited keynote speaker for the <a href="https://physiologie.unibe.ch/nextVeranstaltungen.aspx" target="_blank">PhD and Postdoc Retreat of the Department of Physiology2022</a>.</li>
+        <br>
+        <li> Jul 2022: poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2Cardio22</a> (Bern, Switzerland).</li>
         <br>
         <li> Feb 2022: co-founder and member of a steering committee of <a href="https://www.ukrainiansociety.unibe.ch/index_eng.html" target="_blank">Ukrainian Society of scholars in Bern</a>.</li>
         <br>
@@ -27,13 +31,9 @@ banner: '/assets/images/IMG_7511-2.jpg'
         <br>
         <li> Sep 2021: Co-organizer of the<a href="https://sodiumchannelseminars.org/" target="_blank"> Worlwide Sodium Channel Seminars</a>.</li>
         <br>
-        <li> May 2021: networking officer of <a href="https://www.500womenscientistsfribourgbern.ch/team" target="_blank">500WS Fribourg-Bern</a>, organized networking lunches and pub events.</li>
-        <br>
-        <li> Sep 2022: 2nd best talk award at <a href="https://meetings.ls2.ch/physiology2022" target="_blank">Swiss Physiology Meeting 2022</a>.</li>
-        <br>
-        <li> Jul 2022: poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2Cardio22</a> (Bern, Switzerland).</li>
-        <br>
         <li> Jun 2021: <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> award for undertaking coaching in academic leadership.</li>
+        <br>
+        <li> May 2021: networking officer of <a href="https://www.500womenscientistsfribourgbern.ch/team" target="_blank">500WS Fribourg-Bern</a>, organized networking lunches and pub events.</li>
         <br>
         <li> Dec 2018: Best poster presentation at Ion Channels and Immunity Symposium (New York, USA).</li>
         <br>
