--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,7 @@ banner: '/assets/images/IMG_7511-2.jpg'
 
 
 
-        <li> Feb 2023: Chair for the LS2 Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a>.</li>
-        <br>
-        <li> Mar 2022: Completed <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> (June 2021 - February 2022 session).</li>
-        <br>
-        <li> Feb 2022: Representative of the intermediate staff association of the University of Bern to <a href="http://www.actionuni.ch/" target="_blank">actionuni</a>.</li>
+        <li> Jul 2023: Chair for the LS2 Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a> held in February 2023.</li>
         <br>
         <li> Sep 2022: 2nd best talk award at <a href="https://meetings.ls2.ch/physiology2022" target="_blank">Swiss Physiology Meeting 2022</a>.</li>
         <br>
@@ -24,6 +20,10 @@ banner: '/assets/images/IMG_7511-2.jpg'
         <li> Sep 2022: Invited keynote speaker for the <a href="https://physiologie.unibe.ch/nextVeranstaltungen.aspx" target="_blank">PhD and Postdoc Retreat of the Department of Physiology2022</a>.</li>
         <br>
         <li> Jul 2022: poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2Cardio22</a> (Bern, Switzerland).</li>
+        <br>
+        <li> Mar 2022: Completed <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> (June 2021 - February 2022 session).</li>
+        <br>
+        <li> Feb 2022: Representative of the intermediate staff association of the University of Bern to <a href="http://www.actionuni.ch/" target="_blank">actionuni</a>.</li>
         <br>
         <li> Feb 2022: co-founder and member of a steering committee of <a href="https://www.ukrainiansociety.unibe.ch/index_eng.html" target="_blank">Ukrainian Society of scholars in Bern</a>.</li>
         <br>
