--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,32 +8,31 @@ banner: '/assets/images/IMG_7511-2.jpg'
 <H1>News</H1>
 
 
-
-        <li> Jul 2022: Chair for the LS2 Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a> held in February 2023.</li>
+        <li> Sep 2022: Organized Pub Event for <a href="https://www.linkedin.com/feed/update/urn:li:activity:6983412296383356928/" target="_blank">500WS Bern-Firbourg</a>.</li>
         <br>
         <li> Sep 2022: 2nd best talk award at <a href="https://meetings.ls2.ch/physiology2022" target="_blank">Swiss Physiology Meeting 2022</a>.</li>
         <br>
-        <li> Sep 2022: Organizing committee of the <a href="https://www.nachtderforschung.unibe.ch/unibe/portal/microsites/nacht_der_forschung/content/e581313/e1257964/NdF2022_Programm_ger.pdf" target="_blank">"kids lab"</a> during the <a href="https://www.nachtderforschung.unibe.ch/" target="_blank">Nacht der Forschung</a>.</li>
+        <li> Sep 2022: Organization of the <a href="https://www.nachtderforschung.unibe.ch/unibe/portal/microsites/nacht_der_forschung/content/e581313/e1257964/NdF2022_Programm_ger.pdf" target="_blank">"kids lab"</a> during the <a href="https://www.nachtderforschung.unibe.ch/" target="_blank">Nacht der Forschung</a>.</li>
         <br>
-        <li> Sep 2022: Public presentation of the <a href="https://www.vitaport.ch/" target="_blank">Vitaport</a> exhibition for scientific popularization.</li>
+        <li> Sep 2022: Scientific guide for the <a href="https://www.vitaport.ch/" target="_blank">Vitaport</a> exhibition.</li>
         <br>
-        <li> Sep 2022: Invited keynote speaker for the <a href="https://physiologie.unibe.ch/nextVeranstaltungen.aspx" target="_blank">PhD and Postdoc Retreat of the Department of Physiology2022</a>.</li>
+        <li> Sep 2022: Invited keynote speaker for the <a href="https://physiologie.unibe.ch/nextVeranstaltungen.aspx" target="_blank">PhD and Postdoc Retreat of the Department of Physiology 2022</a>.</li>
         <br>
-        <li> Jul 2022: poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2Cardio22</a> (Bern, Switzerland).</li>
+        <li> Aug 2022: Chair for the LS2 Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a> held in February 2023.</li>
         <br>
-        <li> Mar 2022: Completed <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> (June 2021 - February 2022 session).</li>
+        <li> Jul 2022: Poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2 Cardiovascular Research Meeting 2022</a> (Bern, Switzerland).</li>
+        <br>
+        <li> Mar 2022: Completed <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> (June 2021 - February 2022).</li>
         <br>
         <li> Feb 2022: Representative of the intermediate staff association of the University of Bern to <a href="http://www.actionuni.ch/" target="_blank">actionuni</a>.</li>
-        <br>
-        <li> Feb 2022: co-founder and member of a steering committee of <a href="https://www.ukrainiansociety.unibe.ch/index_eng.html" target="_blank">Ukrainian Society of scholars in Bern</a>.</li>
         <br>
         <li> Feb 2022: Co-founder and member of a steering committee of non-profit association <a href="https://www.500womenscientistsfribourgbern.ch/500ws-switzerland/" target="_blank">500WS-CH</a>.</li>
         <br>
         <li> Sep 2021: Co-organizer of the<a href="https://sodiumchannelseminars.org/" target="_blank"> Worlwide Sodium Channel Seminars</a>.</li>
         <br>
-        <li> Jun 2021: <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> award for undertaking coaching in academic leadership.</li>
+        <li> Jun 2021: Award for <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> to undertake coaching in academic leadership.</li>
         <br>
-        <li> May 2021: networking officer of <a href="https://www.500womenscientistsfribourgbern.ch/team" target="_blank">500WS Fribourg-Bern</a>, organized networking lunches and pub events.</li>
+        <li> May 2021: Networking officer of <a href="https://www.500womenscientistsfribourgbern.ch/team" target="_blank">500WS Fribourg-Bern</a>, organized networking lunches and pub events.</li>
         <br>
         <li> Dec 2018: Best poster presentation at Ion Channels and Immunity Symposium (New York, USA).</li>
         <br>
