--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,9 +18,9 @@ banner: '/assets/images/IMG_7511-2.jpg'
         <br>
         <li> Sep 2022: Invited keynote speaker for the <a href="https://physiologie.unibe.ch/nextVeranstaltungen.aspx" target="_blank">PhD and Postdoc Retreat of the Department of Physiology 2022</a>.</li>
         <br>
-        <li> Aug 2022: Chair for the LS2 Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a> held in February 2023.</li>
+        <li> Aug 2022: Chair for the LS<sup>2</sup> Annual Meeting special session <a href="https://annual-meeting.ls2.ch/2023/specials/pis-of-tomorrow" target="_blank"> "PIs of tomorrow"</a> held in February 2023.</li>
         <br>
-        <li> Jul 2022: Poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS2 Cardiovascular Research Meeting 2022</a> (Bern, Switzerland).</li>
+        <li> Jul 2022: Poster prize award at <a href="https://meetings.ls2.ch/cardiovascular2022" target="_blank">LS<sup>2</sup> Cardiovascular Research Meeting 2022</a> (Bern, Switzerland).</li>
         <br>
         <li> Mar 2022: Completed <a href="https://www.unibe.ch/universitaet/portraet/selbstverstaendnis/chancengleichheit/themen/nachwuchsfoerderung/comet/index_ger.html" target="_blank">COMET program</a> (June 2021 - February 2022).</li>
         <br>
