--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,6 +42,6 @@ banner: '/assets/images/IMG_7511-2.jpg'
         <br>
         <li> Dec 2013 - Dec 2016: PhD funding from the Ligue National Contre le Cancer GB/MA/CD 11813 (2013-2016, France).</li>
         <br>
-        <li> Mar 2011: Scholarship for attendance of Education Without Borders Conference (Dubai, UAE).</li>
+        <li> Mar 2011: Travel grant for attending the Education Without Borders Conference (Dubai, UAE).</li>
         <br>
         <li> Sep 2007 - Jun 2011: Ukrainian governmental scholarship for BSc studies (Kyiv, Ukraine).</li> 
